// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-partial-view should create a partial view 1`] = `
{
  "content": [],
  "structuredContent": {
    "message": "Partial view created successfully",
    "path": "/_TestCreatePartialView.cshtml",
  },
}
`;

exports[`create-partial-view should create partial view with parent folder 1`] = `
{
  "content": [],
  "structuredContent": {
    "message": "Partial view created successfully",
    "path": "/_TestPartialViewParentFolder/_TestCreatePartialView.cshtml",
  },
}
`;

exports[`create-partial-view should handle existing partial view name 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"Partial view already exists","status":400,"detail":"A partial view with the same path already exists","operationStatus":"AlreadyExists"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;
